# neural_network_from_scratch_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  hyperparam_search.csv  hyperparam_search_2.csv  predicted_validate.csv  run.sh
evaluator/: evaluate.py
src/: function.hpp  hyperparam_search.cpp  main.cpp  matrix.hpp  misc.cpp  misc.h  misc.hpp  miscellaneous.hpp  neuralnetwork.h  neuralnetwork.hpp  tensor.h  tensor.hpp  tests.cpp
